# algoritmic_trading

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
code/: BackTrader Training Notebook.ipynb  NewYork Liquid Strategy.ipynb
code/backtesting/: financial_data_traitment.py  get_fmp_financial_data.py  run_cerebro.py  run_cerebro_ny_liquid_strategy.py
data/: EURUSD_5min_20250101_20250808.csv  EURUSD_5min_20250101_20250814.csv
docs/: test_strategy_1.puml  test_strategy_2.puml  test_strategy_3.puml
