[project]
name = "algoritmic-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Jiliar Silgado",email = "jiliar.silgado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "vectorbt (>=0.28.0,<0.29.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "fmp-python (>=0.1.5,<0.2.0)",
    "ipympl (>=0.9.7,<0.10.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "plotly (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
